recursion.cons.ismember.IsMember.scala.error
Compilation error:
IsMember:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (l.head == v)
  ^